# ebook

./: .gitignore  .gitmodules  arion-compose-kafka.nix  arion-compose.nix  ci.nix  default.nix  docker-compose.yaml  flake.nix  k8shell.nix  kubenix.nix  mailwatch.py  mailwatch_test.py  make-ebook.sh  module.nix  nix-shell.sh  nixpkgs.nix  pyproject.toml  readability.js  requirements.nix  requirements.txt  requirements_frozen.txt  requirements_override.nix  send-test-mail.sh  setup.py  shell.nix  strip_img.py  test_mails
.github/workflows/: build_nix.yml
cartographer/: .factorypath  .gitignore  default.nix  dependency-reduced-pom.xml  micronaut-cli.yml  pom.xml  result  shell.nix
cartographer/src/main/java/cartographer/: MailStreamIMAP.java  ReceivedMailProducer.java  ReceivedMailProducerApplication.java
cartographer/src/main/resources/: application.yml
dog/: .gitignore  default.nix  go.mod  main.go  shell.nix
ebook/: __init__.py  convert_img.py  ebook.css  ebook.py  hyphenate.py  strip_img.py
hyphe/: Hyphe.hs  Hyphenated.hs  Lit.hs  Main.hs  Parrot.hs  hyphe.cabal  hyphenated
lit/: default.nix  index.js
mob/: requirements-dev.txt  requirements.nix  requirements_frozen.txt  requirements_override.nix  setup.py
og/: .gitignore  default.nix  disintegration.html  requirements-dev.txt  shell.nix
original-gangsta/: .gitignore  MANIFEST.in  lacan.html  stupid.html
original-gangsta/ebook/: ebook.css  ebook.py  hyphenate.py
parrot/: index.js  yarn.nix
pubes/: Article.hs  Epub.hs  Hyphe.hs  Hyphenated.hs  Main.hs  Pubes.hs  default.nix  pubes.cabal
services/cartographer/: .gitignore  default.nix  dependency-reduced-pom.xml  pom.xml  shell.nix
services/cartographer/src/main/java/cartographer/: Application.java  CartographerApplication.java  CartographerProducer.java  MailStream.java  MailStreamIMAP.java
services/cartographer/src/main/resources/: application.yml
services/dog/: default.nix  main.go  main_test.go
services/heave/: .gitignore  Dockerfile  default.nix  heave.sln
services/heave/heave/: Program.cs  heave.csproj  nuget-packages.json
services/hyphe/: Hyphe.hs  Main.hs  default.nix  hyphe.cabal
services/lit/: .gitignore  default.nix  index.js  package.json  pnpm-lock.yaml  shell.nix  yarn.nix
services/mob/: default.nix  nixpkgs.nix  pyproject.toml  requirements.nix  shell.nix
services/mob/mob/: __init__.py
services/parrot/: .gitignore  default.nix  index.js  package.json  pnpm-lock.yaml  shell.nix
services/pubes/: .gitignore  Dockerfile  Hyphe.hs  Main.hs  default.nix  pubes.cabal  shell.nix
services/scribe/: Dockerfile  default.nix  scribe.sln  shell.nix
services/scribe/scribe/: Program.fs  nuget-packages.json  scribe.fsproj
services/urex/: .gitignore  default.nix  nixpkgs.nix  pyproject.toml  requirements.nix  requirements.txt  setup.py  shell.nix
services/urex/urex/: __init__.py
services/weir/: .gitignore  build.sbt  default.nix  repo.nix  sbtix.nix  shell.nix
services/weir/project/: plugins.sbt  repo.nix
services/weir/src/main/scala/: Config.scala  MailRegistry.scala  Main.scala  Pipe.scala
test-kafka-client/: .gitignore  default.nix  pyproject.toml  requirements-dev.txt  requirements_frozen.txt  shell.nix  test.py
urex/: .gitignore  default.nix  requirements.nix  requirements.txt  requirements_frozen.txt  result
urex/urex/: __init__.py
