[tool.poetry]
name = "ebook"
version = "1.0.10"
description = "IMAP url -> SMTP mobi"
authors = ["Szczyp <qb@szczyp.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.scripts]
ebook = 'ebook:main'
url2ebook = 'ebook:url2ebook'
hyphenate = 'ebook:hyphenate'

[tool.poetry.dependencies]
python = "^3.9"
IMAPClient = "^2.2"
pandocfilters = "^1.4.3"
Pyphen = "^0.11.0"
urlextract = "^1.3.0"
PyYAML = "^5.4.1"
aiohttp = "^3.7.4"
cchardet = "^2.1.7"
beautifulsoup4 = "^4.9.3"
langdetect = "^1.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
