[tool.poetry]
name = "test-kafka-client"
version = "1.0.0"
description = ""
authors = ["Szczyp <qb@szczyp.com>"]

[tool.poetry.dependencies]
python = "^3.7"
confluent-kafka = "^1.3.0"

[tool.poetry.scripts]
test-kafka-client = 'test_kafka_client:main'

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
